--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 </head>
-<body style="background: #333842">
+<body>
     <div id="root"></div>
+    <script>
+        window.fuck = Date.now().toString()
+    </script>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
